--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -4,3 +4,7 @@
 body {
   background-image: image-url('SUCCESS2.jpg'); // link to /assets/images/texture.png
 }
+
+table, th, td {
+   border: 1px solid black;
+} 
