--- a/app/views/cars/rez.html.erb
+++ b/app/views/cars/rez.html.erb
@@ -4,6 +4,7 @@
   <link rel="stylesheet" href="//code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
   <script src="//code.jquery.com/jquery-1.10.2.js"></script>
   <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+  
   <link rel="stylesheet" href="/resources/demos/style.css">
   <script>
   $(function() {
@@ -72,9 +73,18 @@ document.getElementById("#clname").disabled=true;
   <div class="large-6 columns">
   	  <div class="panel">
     <%= form_tag '/reznew' do %>
-    	<%= text_field_tag "cnum", Contract.maximum(:id) + 1 , :readonly => true%>
-    	<%=label_tag 'Имя клиента',"Клиент", :id => "clname" %>
-    	<%= autocomplete_field_tag 'name', '', autocomplete_client_sname_cars_path, :size => 75 %>
+    <%
+  	 if Contract.maximum(:id) != nil
+  	 	conmax = Contract.maximum(:id)
+  	 else 
+  	 	conmax = 0
+  	 end		
+  	%>
+    	<%= text_field_tag 'cnum', conmax + 1 , :readonly => true%>
+    	<%=label_tag 'Имя клиента',"Серия паспорта", :id => "clname" %>
+    	<%= autocomplete_field_tag 'name', params[:pseria], autocomplete_client_pseria_cars_path, :id_element => "#client_id", :size => 35 %>
+    	<%= hidden_field_tag :client_id  %>
+    	<%= label_tag params[:sname] %>
     	<%= label_tag 'Залог' %>
     	<%= text_field_tag 'zalog'%>
     	
@@ -83,8 +93,23 @@ document.getElementById("#clname").disabled=true;
   <label for="remind">Создать нового клиента</label>
   
 </p>
-	<div id="pan" class="panel">
-  		<p>Новый клиент</p>
+	
+    	<%= label_tag 'Номер автомобиля' %>
+    	<%= select_tag "car_num", options_for_select(Car.all.collect {|p| [ p.gnum, p.id ] }) %>
+    	<%= label_tag 'Дата начала договора' %>
+    	<%= text_field_tag 'nstdate',DateTime.now.strftime('%d.%m.%Y'), :id => "dt"%>
+    	<%= label_tag 'Дата конца договора'%>
+    	<%= text_field_tag 'enddate',DateTime.now.strftime('%d.%m.%Y'), :id => "dt1"%>
+    	<%= label_tag 'Менеджер' %>
+    	<%= text_field_tag 'user', current_user.username, :readonly => true%>
+	<center><%= submit_tag 'Сохранить',:class=>"button tiny" %>
+		<%= submit_tag 'Печать брони',:class=>"button tiny" %></center>
+	<% end %>
+  </div>
+  </div>
+  <div class="large-6 columns">
+  	<div id="pan" class="panel">
+  		
   		<%= label_tag 'Фамилия' %>
     	<%= text_field_tag 'surname'%>
     	<%= label_tag 'Имя' %>
@@ -108,19 +133,7 @@ document.getElementById("#clname").disabled=true;
     	<%= text_field_tag 'pemail'%>
     	<%= label_tag 'Контактный телефон' %>
     	<%= text_field_tag 'tel'%>
-  	</div>	
-    	<%= label_tag 'Номер автомобиля' %>
-    	<%= select_tag "car_num", options_for_select(Car.all.collect {|p| [ p.gnum, p.id ] }) %>
-    	<%= label_tag 'Дата начала договора' %>
-    	<%= text_field_tag 'nstdate',DateTime.now.strftime('%d.%m.%Y'), :id => "dt"%>
-    	<%= label_tag 'Дата конца договора'%>
-    	<%= text_field_tag 'enddate',DateTime.now.strftime('%d.%m.%Y'), :id => "dt1"%>
-    	<%= label_tag 'Менеджер' %>
-    	<%= text_field_tag 'user', current_user.username, :readonly => true%>
-	<center><%= submit_tag 'Сохранить',:class=>"button tiny" %></center>
-	<% end %>
-  </div>
-  </div>
-  
+  	</div>
+  	</div>
 </div>
 
