--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,6 +14,9 @@
  *= require foundation_and_overrides
  *= require_tree .
 *= require jquery.dataTables
+*= require jquery.timepicker.css
+*= require jquery-ui
+*= require jquery-ui-timepicker-addon
 */
 /*= require jquery-ui*/
 
@@ -37,3 +40,4 @@
     display: none;
   }
 }
+
